chore(next): add tinacms audit test script

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -5,6 +5,7 @@
   "module": "dist/gspenst-next.esm.js",
   "scripts": {
     "gen": "tinacms schema:compile && tinacms schema:types",
+    "test:tina": "tinacms audit",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
