--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -29,6 +29,7 @@
     "ioredis": "^5.0.3",
     "js-yaml": "^4.1.0",
     "neverthrow": "^4.3.1",
+    "normalizr": "^3.6.2",
     "path-to-regexp": "^6.2.0",
     "react-error-boundary": "^3.1.4",
     "react-is": ">=16.13.1",
