--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -22,6 +22,7 @@
     "dataloader": "^2.1.0",
     "debug": "^4.3.3",
     "dot-prop": "^7.2.0",
+    "filter-obj": "^3.0.0",
     "find-cache-dir": "^3.3.2",
     "fnv1a": "^1.1.1",
     "fs-extra": "^10.0.0",
