--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -21,6 +21,7 @@
     "cross-spawn": "^7.0.3",
     "dataloader": "^2.1.0",
     "debug": "^4.3.3",
+    "deepmerge": "^4.2.2",
     "dot-prop": "^7.2.0",
     "filter-obj": "^3.0.0",
     "find-cache-dir": "^3.3.2",
