--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -9,48 +9,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@gspenst/components": "^0.0.1",
-    "@mdx-js/loader": "^2.0.0-next.9",
-    "@mdx-js/mdx": "^2.0.0-next.9",
+    "@gspenst/core": "^0.0.1",
     "@preconstruct/next": "^4.0.0",
-    "@tinacms/cli": "^0.60.19",
-    "@tryghost/nql": "^0.9.1",
-    "@tryghost/string": "^0.1.23",
-    "@tryghost/tpl": "^0.1.14",
-    "async-mutex": "^0.3.2",
-    "cross-spawn": "^7.0.3",
-    "dataloader": "^2.1.0",
     "debug": "^4.3.3",
-    "deepmerge": "^4.2.2",
-    "dot-prop": "^7.2.0",
-    "filter-obj": "^3.0.0",
-    "find-cache-dir": "^3.3.2",
-    "fnv1a": "^1.1.1",
-    "fs-extra": "^10.0.0",
-    "graphql": "^16.5.0",
-    "gray-matter": "^4.0.3",
-    "ioredis": "^5.0.3",
     "js-yaml": "^4.1.0",
-    "neverthrow": "^4.3.1",
-    "normalizr": "^3.6.2",
-    "path-to-regexp": "^6.2.0",
+    "next-transpile-modules": "^9.0.0",
     "react-error-boundary": "^3.1.4",
     "react-is": ">=16.13.1",
-    "remark-gfm": "^1.0.0",
-    "sort-on": "^5.0.0",
-    "styled-components": "^5.3.5",
-    "tinacms": "^0.68.7",
-    "zod": "^3.17.3"
+    "tinacms": "^0.68.7"
   },
   "devDependencies": {
-    "@types/cross-spawn": "^6.0.2",
-    "@types/find-cache-dir": "^3.2.1",
-    "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
-    "@types/mock-fs": "^4.13.1",
     "@types/react-is": ">=16.13.1",
     "@types/webpack": "^5.0.0",
-    "mock-fs": "^5.1.1",
+    "styled-components": "^5.3.5",
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
