--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@gspenst/core": "*",
     "@gspenst/next": "*",
     "next": "^12.1.5",
     "react": "^17.0.2",
