--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -16,7 +16,8 @@
     "@gspenst/next": "*",
     "next": "^12.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
