--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -7,7 +7,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@gspenst/core": "^0.0.1",
+    "gspenst": "^0.0.1",
     "@preconstruct/next": "^4.0.0",
     "debug": "^4.3.3",
     "js-yaml": "^4.1.0",
