--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@gspenst/core": "*",
+    "gspenst": "*",
     "@gspenst/next": "*",
     "next": "^12.2.0",
     "react": "^17.0.2",
