feat(gspenst): add entry for mdx component

--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -55,7 +55,8 @@
       "server.ts",
       "data.ts",
       "components/TinaProvider.tsx",
-      "components/Admin.tsx"
+      "components/Admin.tsx",
+      "components/MdxTheme.tsx"
     ]
   }
 }
