--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "gspenst": "*",
     "@gspenst/next": "*",
+    "@gspenst/nextra-theme-blog": "*",
+    "gspenst": "*",
     "next": "^12.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
