feat(gspenst): add `useConfig` hook

--- a/packages/nextra-theme-blog/package.json
+++ b/packages/nextra-theme-blog/package.json
@@ -8,6 +8,7 @@
     "schema"
   ],
   "scripts": {
+    "gen": "tinacms schema:compile && tinacms schema:types",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
