--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@napi-rs/simple-git": "^0.1.8",
     "@tryghost/nql": "^0.9.1",
-    "@tryghost/string": "^0.1.23",
     "@tryghost/tpl": "^0.1.14",
     "async-mutex": "^0.3.2",
     "cross-spawn": "^7.0.3",
@@ -35,6 +34,7 @@
     "normalizr": "^3.6.2",
     "path-to-regexp": "^6.2.0",
     "react-is": ">=16.13.1",
+    "slugify": "^1.6.5",
     "sort-on": "^5.0.0",
     "tinacms": "^0.68.13",
     "zod": "^3.17.3"
