--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,8 +18,7 @@
     "debug": "^4.3.3",
     "fs-extra": "^10.0.0",
     "gspenst": "^0.0.1",
-    "js-yaml": "^4.1.0",
-    "ts-import": "^4.0.0-beta.6"
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
