--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "tinacms server:start -c \"next build\"",
+    "build": "tinacms server:start -c \"next build\" --experimentalData",
     "debug": "NODE_OPTIONS='--inspect' next dev",
-    "dev": "tinacms server:start -c \"next dev\"",
+    "dev": "tinacms server:start -c \"next dev\" --experimentalData",
     "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
     "lint": "next lint",
     "start": "tinacms server:start -c \"next start\"",
