--- a/playground/minimal-starter/package.json
+++ b/playground/minimal-starter/package.json
@@ -4,28 +4,23 @@
   "private": true,
   "scripts": {
     "analyze": "ANALYZE=true npm run build",
-    "build": "tinacms server:start -c \"next build\" --experimentalData",
-    "debug": "NODE_OPTIONS='--inspect' next dev",
-    "dev": "tinacms server:start -c \"next dev\" --experimentalData",
+    "build": "GSPENST_REVALIDATE='60000' tinacms build && next build",
+    "debug": "NODE_OPTIONS='--inspect' npm dev",
+    "dev": "tinacms dev -c \"next dev\"",
     "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
     "lint": "next lint",
-    "start": "tinacms server:start -c \"next start\"",
+    "start": "tinacms build && next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/next": "*",
-    "@tinacms/cli": "^0.60.28",
+    "@next/bundle-analyzer": "^12.2.2",
+    "@tinacms/cli": "^0.61",
     "gspenst": "*",
     "next": "^12.2.0",
     "next-bundle-analyzer": "^0.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.20",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.6.3"
   }
 }
