--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -34,6 +34,7 @@
     "react-is": ">=16.13.1",
     "slugify": "^1.6.5",
     "sort-on": "^5.0.0",
+    "styled-components": "^5.3.5",
     "tinacms": "^0.68.14",
     "zod": "^3.17.3"
   },
