--- a/playground/blog-starter/package.json
+++ b/playground/blog-starter/package.json
@@ -16,11 +16,13 @@
     "@gspenst/next": "*",
     "@gspenst/nextra-theme-blog": "*",
     "@next/bundle-analyzer": "^12.2.2",
-    "@tinacms/cli": "^0.61.1",
     "gspenst": "*",
     "next": "^12.2.0",
     "next-bundle-analyzer": "^0.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^0.61.1"
   }
 }
