--- a/playground/minimal-starter/package.json
+++ b/playground/minimal-starter/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@gspenst/next": "*",
     "@next/bundle-analyzer": "^12.2.2",
-    "@tinacms/cli": "^0.61",
     "gspenst": "*",
     "next": "^12.2.0",
     "next-bundle-analyzer": "^0.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^0.61.1"
   }
 }
