feat(playground): add missing eslint config

--- a/playground/minimal-starter/package.json
+++ b/playground/minimal-starter/package.json
@@ -23,6 +23,7 @@
     "react-json-view": "^1.21.3"
   },
   "devDependencies": {
-    "@tinacms/cli": "^0.61.1"
+    "@tinacms/cli": "^0.61.1",
+    "eslint-config-next": "12.2.5"
   }
 }
