--- a/playground/blog-starter/package.json
+++ b/playground/blog-starter/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@tinacms/cli": "^0.61.1"
+    "@tinacms/cli": "^0.61.1",
+    "eslint-config-next": "12.2.5"
   }
 }
