--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   ],
   "scripts": {
     "build": "preconstruct build",
+    "checkall": "yarn test && yarn lint && yarn typecheck",
     "clean": "rimraf packages/*/dist",
     "lint": "eslint . --ext .ts,.tsx",
     "prepare": "husky install && preconstruct dev",
-    "publish": "npm run build && npm publish --access public --workspace gspenst --workspace @gspenst/next",
+    "release": "yarn build && changeset publish",
     "test": "jest",
-    "typecheck": "npm run typecheck --workspaces",
+    "typecheck": "yarn typecheck --workspaces",
     "watch": "preconstruct watch"
   },
   "lint-staged": {
@@ -118,10 +119,6 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "typescript": "4.7.3"
-  },
-  "engines": {
-    "node": ">=16.13.2",
-    "npm": "^8.1.2"
   },
   "preconstruct": {
     "packages": [
