--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "@gspenst/root",
-  "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "playground/*"
-  ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "preconstruct build",
-    "checkall": "yarn test && yarn lint && yarn types:check",
+    "checkall": "pnpm test && pnpm lint && pnpm types:check",
     "clean": "rimraf packages/*/dist",
     "lint": "eslint . --ext .ts,.tsx",
     "prepare": "husky install && preconstruct dev",
-    "prerelease": "yarn build",
+    "prerelease": "pnpm build",
     "release": "changeset publish",
     "test": "jest",
-    "types:check": "yarn typecheck --workspaces",
+    "types:check": "pnpm typecheck --workspaces",
     "version": "changeset version",
     "watch": "preconstruct watch"
   },
@@ -126,5 +122,12 @@
     "packages": [
       "packages/*"
     ]
-  }
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "^18.0.15",
+      "@types/react-dom": "^18.0.6"
+    }
+  },
+  "packageManager": "pnpm@7.3.0"
 }
