--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -24,11 +24,10 @@
     "@types/js-yaml": "^4.0.5",
     "@types/react-is": ">=16.13.1",
     "@types/webpack": "^5.0.0",
-    "styled-components": "^5.3.5",
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "next": "^12.0.0",
+    "next": ">=9.5.3",
     "react": ">=16.13.1"
   },
   "preconstruct": {
