--- a/playground/minimal-starter/package.json
+++ b/playground/minimal-starter/package.json
@@ -10,7 +10,7 @@
     "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
     "lint": "next lint",
     "start": "tinacms build && next start",
-    "typecheck": "tsc --noEmit"
+    "lint:types": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/next": "*",
