--- a/packages/nextra-theme-blog/package.json
+++ b/packages/nextra-theme-blog/package.json
@@ -8,17 +8,16 @@
     "schema"
   ],
   "scripts": {
-    "gen": "tinacms schema:compile && tinacms schema:types",
     "lint:types": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/next": "^0.0.6",
     "@mdx-js/react": "^2.1.1",
     "gspenst": "^0.0.6",
-    "nextra-theme-blog": "2.0.0-alpha.55"
+    "nextra-theme-blog": "2.2.19"
   },
   "devDependencies": {
-    "nextra": "2.0.0-alpha.56"
+    "nextra": "2.2.19"
   },
   "peerDependencies": {
     "next": ">=9.5.3",
