chore(gspenst): convert to new tina config rearrangement

--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -10,8 +10,7 @@
     "components"
   ],
   "scripts": {
-    "gen": "tinacms build --local",
-    "build:tinacms": "tinacms build",
+    "dev": "tinacms dev",
     "test:tina": "tinacms audit",
     "lint:types": "tsc --noEmit"
   },
