chore(gspenst): revert new tina config rearrangement and move into `src`
tina has a bug with new config location + `rootPath` flag

--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -10,8 +10,8 @@
     "components"
   ],
   "scripts": {
-    "dev": "tinacms dev",
-    "test:tina": "tinacms audit",
+    "dev": "tinacms dev --rootPath src",
+    "test:tina": "tinacms audit --rootPath src",
     "lint:types": "tsc --noEmit"
   },
   "dependencies": {
