--- a/package.json
+++ b/package.json
@@ -89,8 +89,10 @@
     ]
   },
   "resolutions": {
-    "**/@types/react": "^17.0.38",
-    "**/@types/react-dom": "^17.0.11"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
@@ -102,8 +104,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "eslint": "^8.17.0",
     "eslint-config-kentcdodds": "^20.2.0",
     "jest": "^27.5.1",
