--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -39,7 +39,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@tinacms/cli": "^1.4.0",
+    "@tinacms/cli": "^1.5.2",
     "@types/cross-spawn": "^6.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/mock-fs": "^4.13.1",
@@ -47,7 +47,8 @@
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "react": ">=16.13.1"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1"
   },
   "preconstruct": {
     "entrypoints": [
