--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -28,7 +28,8 @@
   },
   "peerDependencies": {
     "next": ">=9.5.3",
-    "react": ">=16.13.1"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1"
   },
   "preconstruct": {
     "entrypoints": [
