chore: include eslint to git pre-push hook

--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "build": "preconstruct build",
     "checkall": "yarn test && yarn lint && yarn lint:types && yarn lint:format",
     "clean": "rimraf packages/*/dist",
-    "lint": "eslint --cache --ignore-path .gitignore --max-warnings 0 . --ext .ts,.tsx",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
     "prerelease": "yarn build",
     "release": "changeset publish",
     "test": "jest",
-    "lint:format": "prettier --ignore-path .gitignore  . -l",
+    "lint": "yarn lint:types & yarn lint:eslint & yarn lint:format",
     "lint:types": "yarn workspaces run lint:types",
+    "lint:eslint": "eslint --cache --ignore-path .gitignore --max-warnings 0 . --ext .ts,.tsx",
+    "lint:format": "prettier --ignore-path .gitignore  . -l",
     "version": "changeset version",
     "watch": "preconstruct watch"
   },
