--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "build": "preconstruct build",
     "checkall": "yarn test && yarn lint && yarn lint:types && yarn lint:format",
     "clean": "rimraf packages/*/dist",
+    "lint": "yarn lint:types & yarn lint:eslint & yarn lint:format",
+    "lint:eslint": "eslint --cache --ignore-path .gitignore --max-warnings 0 . --ext .ts,.tsx",
+    "lint:format": "prettier --ignore-path .gitignore  . -l",
+    "lint:types": "yarn workspaces run lint:types",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
     "prerelease": "yarn build",
     "release": "changeset publish",
     "test": "jest",
-    "lint": "yarn lint:types & yarn lint:eslint & yarn lint:format",
-    "lint:types": "yarn workspaces run lint:types",
-    "lint:eslint": "eslint --cache --ignore-path .gitignore --max-warnings 0 . --ext .ts,.tsx",
-    "lint:format": "prettier --ignore-path .gitignore  . -l",
     "version": "changeset version",
     "watch": "preconstruct watch"
   },
@@ -90,10 +90,10 @@
     ]
   },
   "resolutions": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
