--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -11,8 +11,8 @@
   ],
   "scripts": {
     "dev": "tinacms dev --rootPath src",
-    "test:tina": "tinacms audit --rootPath src",
-    "lint:types": "tsc --noEmit"
+    "lint:types": "tsc --noEmit",
+    "test:tina": "tinacms audit --rootPath src"
   },
   "dependencies": {
     "@napi-rs/simple-git": "^0.1.8",
