--- a/playground/minimal-starter/package.json
+++ b/playground/minimal-starter/package.json
@@ -9,17 +9,17 @@
     "dev": "tinacms dev -c \"next dev\"",
     "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
     "lint": "next lint",
-    "start": "tinacms build && next start",
-    "lint:types": "tsc --noEmit"
+    "lint:types": "tsc --noEmit",
+    "start": "tinacms build && next start"
   },
   "dependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "next": ">=13",
-    "gspenst": "*",
     "@gspenst/next": "*",
     "@next/bundle-analyzer": "^12.2.2",
+    "gspenst": "*",
+    "next": ">=13",
     "next-bundle-analyzer": "^0.6.4",
+    "react": "*",
+    "react-dom": "*",
     "react-json-view": "^1.21.3"
   },
   "devDependencies": {
