--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tinacms build && next build",
     "dev": "tinacms dev -c \"next dev\"",
-    "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
+    "export": "npm run build && next export",
     "lint": "next lint",
     "lint:types": "tsc --noEmit",
     "start": "tinacms build && next start"
