chore: expand global test cmd

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
     "prerelease": "yarn build",
     "release": "changeset publish",
-    "test": "jest",
+    "test": "jest && yarn workspace gspenst test:tina",
     "version": "changeset version",
     "watch": "preconstruct watch"
   },
