chore: move preconstruct exports config into packages

--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -70,6 +70,7 @@
     "react-dom": ">=16.13.1"
   },
   "preconstruct": {
+    "exports": true,
     "entrypoints": [
       "index.ts",
       "server.ts",
