--- a/packages/@gspenst/next/package.json
+++ b/packages/@gspenst/next/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@gspenst/next",
   "version": "0.0.6",
+  "main": "dist/gspenst-next.cjs.js",
+  "module": "dist/gspenst-next.esm.js",
   "exports": {
     ".": {
       "module": "./dist/gspenst-next.esm.js",
@@ -16,8 +18,6 @@
     },
     "./package.json": "./package.json"
   },
-  "main": "dist/gspenst-next.cjs.js",
-  "module": "dist/gspenst-next.esm.js",
   "files": [
     "dist",
     "loader",
@@ -47,6 +47,7 @@
     "react-dom": ">=16.13.1"
   },
   "preconstruct": {
+    "exports": true,
     "entrypoints": [
       "index.ts",
       "loader.ts",
