--- a/packages/@gspenst/nextra-theme-blog/tsconfig.json
+++ b/packages/@gspenst/nextra-theme-blog/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../../tsconfig.json",
   "include": ["src", "./.tina/__generated__/types.ts"]
 }
