chore: use `eslint_d`

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "checkall": "yarn test && yarn lint && yarn lint:types && yarn lint:format",
     "clean": "rimraf packages/*/dist",
     "lint": "yarn lint:types & yarn lint:eslint & yarn lint:format",
-    "lint:eslint": "eslint --cache --ignore-path .gitignore --max-warnings 0 . --ext .ts,.tsx",
+    "lint:eslint": "eslint_d --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
     "lint:format": "prettier --ignore-path .gitignore  . -l",
     "lint:types": "yarn workspaces run lint:types",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
