--- a/packages/@gspenst/cli/package.json
+++ b/packages/@gspenst/cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@gspenst/cli",
   "version": "0.0.6",
+  "license": "MIT",
   "main": "dist/gspenst-cli.cjs.js",
   "module": "dist/gspenst-cli.esm.js",
   "files": [
