--- a/packages/@gspenst/next/package.json
+++ b/packages/@gspenst/next/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@gspenst/next",
   "version": "0.0.6",
+  "license": "MIT",
   "main": "dist/gspenst-next.cjs.js",
   "module": "dist/gspenst-next.esm.js",
   "exports": {
