--- a/packages/@gspenst/nextra-theme-blog/package.json
+++ b/packages/@gspenst/nextra-theme-blog/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@gspenst/nextra-theme-blog",
   "version": "0.0.6",
+  "license": "MIT",
   "main": "dist/gspenst-nextra-theme-blog.cjs.js",
   "module": "dist/gspenst-nextra-theme-blog.esm.js",
   "exports": {
