chore: update starter

--- a/starters/minimal-starter/.gitignore
+++ b/starters/minimal-starter/.gitignore
@@ -1,35 +1,63 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+node_modules
+
+# package managers
+.pnp/
 .pnp.js
+.yarn
+.pnp.js
+.yarnrc.yml
 
-# testing
-/coverage
+# Optional npm cache directory
+.npm
 
-# next.js
-/.next/
-/out/
+# Optional REPL history
+.node_repl_history
 
-# production
-/build
+# Output of 'npm pack'
+*.tgz
 
-# misc
+# dotenv environment variable files
+.env*
+
+# Optional eslint cache
+.eslintcache
+
+# builds
+dist
+out
+lib
+*.tsbuildinfo
+
+#**/.tina/__generated__/
+# tinacms
+**/__generated__/*
+!__generated__/__mocks__
+**/public/admin/*
+
+# nextjs
+.next
+
+# Mac files
 .DS_Store
-*.pem
 
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-!.env.example
+# Editors
+Thumbs.db
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+Session.vim
 
-# vercel
-.vercel
+# Excludes users project
+site
+
