--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "@gspenst/next": "^0.1.0",
     "gspenst": "^0.1.0",
-    "next": "^12.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.6.3"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "^13.4.1",
+    "typescript": "5.0.3"
   }
 }
